changed hr line in media query for phones to 200px to stop from running off screen

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ footer {
         margin-right: auto;
     }
     hr {
-        width: 300px;
+        width: 150px;
     }
     #work p {
         width: 50%;
@@ -322,7 +322,7 @@ footer {
         margin-right: auto;
     }
     hr {
-        width: 300px;
+        width: 150px;
     }
     #work p {
         width: 50%;
